# DocEX

./: .gitignore  ARGO_DEPLOYMENT_GUIDE.md  ARGO_SETUP_INSTRUCTIONS.md  ASSUME_ROLE_GUIDE.md  AUTHENTICATION_STATUS.md  AWS_AUTH_QUICK_FIX.md  AWS_CREDENTIALS_SETUP.md  COMPLETE_WORKFLOW_SUMMARY.md  CONTRIBUTING.md  CREATE_PR.md  DSPY_INTEGRATION_SUMMARY.md  Dockerfile.chargeback  FILES_TO_MERGE.txt  IMPLEMENTATION_STATUS.md  INSTALL_HOMEBREW.md  KB_Implementation_Proposal.html  LICENSE  MANIFEST.in  MERGE_CHECKLIST.md  MERGE_CONFLICTS_REPORT.md  MERGE_SUMMARY.md  PATH_FIX_SUMMARY.md  QUICK_START_ARGO.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  README_DOCKER.md  RELEASE_NOTES.md  TESTING_GUIDE.md  TESTING_ID_CENTRIC.md  TEST_RESULTS.md  TEST_S3_PATHS.md  TROUBLESHOOTING_ASSUME_ROLE.md  create_routes.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  init_db.py  integrate_docex_platform.py  pyproject.toml  requirements.txt  (+20 more)
.github/workflows/: publish.yml
Reference_doc/: Architecture_Review_and_Enhancements.md  KB_IMPLEMENTATION_PROPOSAL.md  Project_Proposal.html  Technical_Specification.html  Updated_RAIN_Architecture_Diagram.html
benchmark_results/: BENCHMARK_REPORT.md  BENCHMARK_SUMMARY.md  benchmark_results.json
db/: connection.py  models.py  repository.py  schema.sql
docex/: __init__.py  cli.py  context.py  docCore.py  docbasket.py  docbasket.py.backup  docex.py  document.py
docex/batch/: __init__.py  ingest.py
docex/config/: __init__.py  config_manager.py  config_resolver.py  default_config.yaml  docex_config.py  docflow_config.py  path_resolver.py
docex/connectors/: __init__.py  base.py  (+5 more)
docflow/: cli.py  docbasket.py  docflow.py  document.py
docflow 2/: __init__.py  cli.py  document.py
docs/: ANOMALY_DETECTION_ASSESSMENT.md  API_Reference.md  CLI_GUIDE.md  DEPENDENCY_OPTIMIZATION.md  DOCEX_LEVERAGE_SUMMARY.md  DOCEX_VALUE_PROPOSITION.md  DOCKER_SETUP.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENT_QUERY_OPTIMIZATIONS.md  DSPY_INTEGRATION_GUIDE.md  Developer_Guide.md  DocBasket_Usage_Guide.md  DocEX_Design.md  DocFlow_Design.md  Docex_3_Design_Review.md  Docex_3_Multi_tenant_RFC.md  EMBEDDING_FN_API.md  GAP_ANALYSIS.md  INSTALL_DEPENDENCIES.md  INTEGRATION_PATTERNS.md  INVOICE_LLM_ADAPTER_ANALYSIS.md  KEYSTONE_RAIN_DOCS_REVIEW.md  Keystone_RAIN_Architecture_Diagram.html  Keystone_RAIN_Architecture_Diagram.md  Keystone_RAIN_Platform_Section.html  LLM_ADAPTERS_GUIDE.md  LLM_ADAPTERS_IMPLEMENTATION_SUMMARY.md  LLM_ADAPTER_IMPLEMENTATION.md  MIGRATION_3_0.md  MULTI_TENANCY_GUIDE.md  NAME_VALIDATION_SANITIZATION.md  NIXTLA_RESOURCE_FOOTPRINT.md  OPENAI_API_KEY_SETUP.md  Path_Resolver_Fixes.md  Path_Resolver_vs_Path_Builder.md  Platform_Integration_Guide.md  Release_Validation_Guide.md  S3_BUCKET_AUTO_CREATION.md  S3_BUCKET_NAMING_RECOMMENDATIONS.md  S3_BUCKET_STRUCTURE_EVALUATION.md  (+12 more)
examples/: LLM_PROVIDER_GUIDE.md  README.md  README_KB_DEMO.md  SECURITY_BEST_PRACTICES.md  SETUP_OLLAMA.md  basic_usage.py  batch_ingestion_example.py  chargeback_workflow_dspy_example.py  chargeback_workflow_dspy_optimized_example.py  chargeback_workflow_example.py  chargeback_workflow_example_local_llm.py  chargeback_workflow_orchestrated.py  chunking_benchmark.py  chunking_strategies_example.py  complete_chargeback_workflow.py  field_extraction_example.py  generic_kb_example.py  hello_world.py  invoice_metadata_extraction.py  invoice_processing_example.py  kb_service_demo.py  llm_adapter_usage.py  notes.py  pdf_invoice_to_purchase_order.py  processor_csv_to_json.py  processor_word_to_text.py  rag_basic_example.py  rag_enhanced_example.py  route_file_transfer.py  route_management.py  test_claude_adapter.py  test_find_document_by_metadata.py  test_kb_demo_ollama.py  test_llm_adapter_real.py  test_llm_docex_integration.py  test_llm_simple.py  test_local_llm_adapter.py  test_multi_tenancy.py  test_pinecone_api.py  test_pinecone_ollama.py  (+1 more)
scripts/: assume_eks_role.sh  assume_role_and_setup.sh  assume_role_direct.sh  assume_role_simple.sh  create_routes.py  demonstrate_rag_system.py  fix_aws_auth.sh  init_db.py  provision_tenant.py  setup_argo_workflow.sh  setup_aws_auth.sh  setup_llm_adapters.py  setup_postgres_docker.sh  setup_postgres_test_db.sh  test_query_optimizations.py  use_eks_profile.sh
storage/: faiss_index_ollama.bin.metadata
tests/: __init__.py  test_basic.py  test_cli_s3.py  test_core_import_boundaries.py  test_db_connection.py  test_docbasket.py  test_docex3_multitenancy.py  test_docflow.py  test_docflow_postgres.py  test_docflow_usage.py  test_document_lookup_api.py  test_document_query_optimizations.py  test_embedding_providers.py  test_file.txt  test_lazy_storage_read_paths.py  test_llm_adapter.py  test_new_llm_adapters.py  test_query_performance_benchmark.py  test_rag_basic.py  test_records.py  test_route.py  test_route_management.py  test_s3_storage.py  test_s3_tenant_path_structure.py  test_security_fixes.py  test_simple.py  test_sqlite.py  test_transport_base.py  test_transport_integration.py  test_transport_postgres.py  test_transport_sqlite.py  test_transport_workflow.py  test_vector_search.py  test_word_to_text_processor.py  verify_routes.py
(+399 files in other folders)
